fix(api-client): tag services names and module injection tokens
Signed-off-by: Vojtech Mašek <vojtech.masek@flowup.cz>

--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -9,8 +9,8 @@ import { DefaultHttpOptions, HttpOptions, {{&interfaceName}} } from './';
 import * as models from './models';
 {{/definitions.length}}
 
-export const USE_DOMAIN = new InjectionToken<string>('USE_DOMAIN');
-export const USE_HTTP_OPTIONS = new InjectionToken<HttpOptions>('USE_HTTP_OPTIONS');
+export const USE_DOMAIN = new InjectionToken<string>('{{&serviceName}}_USE_DOMAIN');
+export const USE_HTTP_OPTIONS = new InjectionToken<HttpOptions>('{{&serviceName}}_USE_HTTP_OPTIONS');
 
 type APIHttpOptions = HttpOptions & {
   headers: HttpHeaders;
