--- a/templates/ngx-module-export.mustache
+++ b/templates/ngx-module-export.mustache
@@ -2,7 +2,7 @@
 
 import { NgModule, ModuleWithProviders } from '@angular/core';
 import { HttpHeaders, HttpParams } from '@angular/common/http';
-import { {{&serviceName}}, USE_DOMAIN, USE_HTTP_OPTIONS } from './api-client.service';
+import { {{&serviceName}}, USE_DOMAIN, USE_HTTP_OPTIONS } from './{{&serviceFileName}}';
 
 {{#definitions.length}}
 export * from './models';
