feat(models): model export index sorted and filtered for duplicates
Signed-off-by: Vojtech Mašek <vojtech.masek@flowup.cz>

--- a/templates/ngx-models-export.mustache
+++ b/templates/ngx-models-export.mustache
@@ -1,3 +1,5 @@
+/* tslint:disable */
+
 {{#definitions}}
 export { {{name}} } from './{{#renderFileName}}{{name}}{{/renderFileName}}';
 {{/definitions}}
