--- a/templates/ngx-models-export.mustache
+++ b/templates/ngx-models-export.mustache
@@ -1,5 +1,5 @@
 /* tslint:disable */
 
 {{#definitions}}
-export { {{name}} } from './{{#renderFileName}}{{name}}{{/renderFileName}}';
+export { {{definitionName}} } from './{{#renderFileName}}{{definitionName}}{{/renderFileName}}';
 {{/definitions}}
