feat(method-params): union types determined for enum like union strings and numbers
example GitHub `orderBy: string` is now `'id' | 'title' | 'subtitle' | ...`

--- a/templates/ngx-guarded-service.mustache
+++ b/templates/ngx-guarded-service.mustache
@@ -29,7 +29,7 @@ export class Guarded{{&serviceName}} extends {{&serviceName}} {
   {{#parameters.length}}
     args: {
       {{#parameters}}
-      {{&camelCaseName}}{{^isRequired}}?{{/isRequired}}: {{importType}}{{#isArray}}[]{{/isArray}},{{#description}}  //{{^isRequired}} (optional){{/isRequired}} {{&.}}{{/description}}
+      {{&camelCaseName}}{{^isRequired}}?{{/isRequired}}: {{&importType}}{{#isArray}}[]{{/isArray}},{{#description}}  //{{^isRequired}} (optional){{/isRequired}} {{&.}}{{/description}}
       {{/parameters}}
     },
   {{/parameters.length}}
