--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -53,7 +53,7 @@ export class {{&serviceName}} implements {{&interfaceName}} {
   {{#parameters.length}}
     args: {
       {{#parameters}}
-      {{&camelCaseName}}{{^isRequired}}?{{/isRequired}}: {{importType}}{{#isArray}}[]{{/isArray}},{{#description}}  //{{^isRequired}} (optional){{/isRequired}} {{&.}}{{/description}}
+      {{&camelCaseName}}{{^isRequired}}?{{/isRequired}}: {{&importType}}{{#isArray}}[]{{/isArray}},{{#description}}  //{{^isRequired}} (optional){{/isRequired}} {{&.}}{{/description}}
       {{/parameters}}
     },
   {{/parameters.length}}
