--- a/templates/ngx-guarded-service.mustache
+++ b/templates/ngx-guarded-service.mustache
@@ -36,7 +36,7 @@ export class Guarded{{&serviceName}} extends {{&serviceName}} {
     requestHttpOptions?: HttpOptions
   ): Observable<{{&response}}> {
     return super.{{&methodName}}({{#parameters.length}}args, {{/parameters.length}}requestHttpOptions)
-      .pipe(tap((res) => guards.is{{&responseTypeName}}(res) || console.error(`TypeGuard for response '{{&responseTypeName}}' caught inconsistency.`, res)));
+      .pipe(tap((res: any) => guards.is{{&responseTypeName}}(res) || console.error(`TypeGuard for response '{{&responseTypeName}}' caught inconsistency.`, res)));
   }
 
 {{/isVoid}}{{/methods}}
