feat(guard): check for null at enum guards
Signed-off-by: Vojtech Mašek <vojtech.masek@flowup.cz>

--- a/templates/ngx-model-guards-export.mustache
+++ b/templates/ngx-model-guards-export.mustache
@@ -35,7 +35,7 @@ export function is{{&definitionName}}(arg: any): arg is models.{{&definitionName
 
 {{/isEnum}}{{#isEnum}}
 export function is{{&definitionName}}(arg: any): arg is models.{{&definitionName}} {
-  return false
+  return arg != null
   {{#properties}} || arg === models.{{&definitionName}}.{{name}}
   {{/properties}};
   }
