--- a/templates/ngx-service-interface.mustache
+++ b/templates/ngx-service-interface.mustache
@@ -15,12 +15,12 @@ export interface {{&interfaceName}} {
   {{#parameters.length}}
     args: {
     {{#parameters}}
-      {{&camelCaseName}}{{^isRequired}}?{{/isRequired}}: {{&importType}}{{#isArray}}[]{{/isArray}},{{#description}}  //{{^isRequired}} (optional){{/isRequired}} {{&.}}{{/description}}
+      {{&camelCaseName}}{{^isRequired}}?{{/isRequired}}: {{&type}},{{#description}}  //{{^isRequired}} (optional){{/isRequired}} {{&.}}{{/description}}
     {{/parameters}}
     },
   {{/parameters.length}}
     requestHttpOptions?: HttpOptions
-  ): Observable<{{&response}}>;
+  ): Observable<{{&responseTypeSchema.type}}>;
 
 {{/methods}}
 }
