fix(guards): any type results in empty guard
fixes #98

--- a/templates/ngx-models-guards-export.mustache
+++ b/templates/ngx-models-guards-export.mustache
@@ -21,8 +21,8 @@ export function is{{&definitionName}}(arg: any): arg is models.{{&definitionName
   arg != null &&
   typeof arg === 'object' &&
   {{#properties}}
-    // {{&name}}{{^isRequired}}?{{/isRequired}}: {{&type}}
-    {{&guard}} &&
+    // {{&name}}{{^isRequired}}?{{/isRequired}}: {{&type}}{{#guard}}
+    {{&guard}} &&{{/guard}}
   {{/properties}}
   {{#extend}}
     // extends {{&.}}
