fix(api-client): form data not set if undefined

--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -95,7 +95,9 @@ export class {{&serviceName}} implements {{&interfaceName}} {
     {{#formData.length}}
     const formData = new FormData();
     {{#formData}}
-    formData.append('{{&name}}', args.{{&camelCaseName}});
+    if (args.{{&camelCaseName}} != undefined) {
+      formData.append('{{&name}}', args.{{&camelCaseName}});
+    }
     {{/formData}}
 
     {{/formData.length}}
