--- a/templates/ngx-module-export.mustache
+++ b/templates/ngx-module-export.mustache
@@ -1,7 +1,6 @@
 /* tslint:disable */
 
 import { NgModule, ModuleWithProviders } from '@angular/core';
-import { HttpHeaders, HttpParams } from '@angular/common/http';
 import { {{&serviceName}}, USE_DOMAIN, USE_HTTP_OPTIONS } from './{{&serviceFileName}}';
 import { Guarded{{&serviceName}} } from './guarded-{{&serviceFileName}}';
 
@@ -9,39 +8,16 @@ export { {{&serviceName}} } from './{{&serviceFileName}}';
 export { {{&interfaceName}} } from './{{&interfaceFileName}}';
 export { Guarded{{&serviceName}} } from './guarded-{{&serviceFileName}}';
 
-/**
- * provided options, headers and params will be used as default for each request
- */
-export interface DefaultHttpOptions {
-  headers?: {[key: string]: string};
-  params?: {[key: string]: string};
-  reportProgress?: boolean;
-  withCredentials?: boolean;
-}
-
-export interface HttpOptions {
-  headers?: HttpHeaders;
-  params?: HttpParams;
-  reportProgress?: boolean;
-  withCredentials?: boolean;
-}
-
-export interface {{&serviceName}}ModuleConfig {
-  domain?: string;
-  guardResponses?: boolean; // validate responses with type guards
-  httpOptions?: DefaultHttpOptions;
-}
-
 @NgModule({})
 export class {{&serviceName}}Module {
   /**
    * Use this method in your root module to provide the {{&serviceName}}Module
    *
    * If you are not providing
-   * @param { {{&serviceName}}ModuleConfig } config
+   * @param { APIClientModuleConfig } config
    * @returns { ModuleWithProviders }
    */
-  static forRoot(config: {{&serviceName}}ModuleConfig = {}): ModuleWithProviders<{{&serviceName}}Module> {
+  static forRoot(config: APIClientModuleConfig = {}): ModuleWithProviders<{{&serviceName}}Module> {
     return {
       ngModule: {{&serviceName}}Module,
       providers: [
