--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -3,7 +3,8 @@
 import { HttpClient, HttpHeaders, HttpParams } from '@angular/common/http';
 import { Inject, Injectable, InjectionToken, Optional } from '@angular/core';
 import { Observable, throwError } from 'rxjs';
-import { DefaultHttpOptions, HttpOptions, {{&interfaceName}} } from './';
+import { {{&interfaceName}} } from './';
+import { DefaultHttpOptions, HttpOptions } from '{{#serviceTag}}../.{{/serviceTag}}./types';
 
 {{#definitions.length}}
 import * as models from '.{{#swaggerTag}}./..{{/swaggerTag}}/models';
