--- a/templates/ngx-service.handlebars
+++ b/templates/ngx-service.handlebars
@@ -4,7 +4,7 @@ import { HttpClient, HttpHeaders, HttpParams } from '@angular/common/http';
 import { Inject, Injectable, InjectionToken, Optional } from '@angular/core';
 import { Observable, throwError } from 'rxjs';
 import { {{&interfaceName}} } from './';
-import { DefaultHttpOptions, HttpOptions } from '{{#serviceTag}}../.{{/serviceTag}}./types';
+import { DefaultHttpOptions, HttpOptions } from '{{#if serviceTag}}../.{{/if}}./types';
 
 {{#definitions.length}}
 import * as models from '.{{#swaggerTag}}./..{{/swaggerTag}}/models';
@@ -51,13 +51,13 @@ export class {{&serviceName}} implements {{&interfaceName}} {
    * {{&.}}
    */
 {{/description}}  {{&methodName}}(
-  {{#parameters.length}}
+  {{#if parameters.length}}
     args: {
-      {{#parameters}}
-      {{&camelCaseName}}{{^isRequired}}?{{/isRequired}}: {{&type}},{{#description}}  //{{^isRequired}} (optional){{/isRequired}} {{&.}}{{/description}}
-      {{/parameters}}
+      {{#each parameters}}
+      {{camelCase name}}{{^isRequired}}?{{/isRequired}}: {{&type}},{{#if description}}  //{{#unless isRequired}} (optional){{/unless}} {{&description}}{{/if}}
+      {{/each}}
     },
-  {{/parameters.length}}
+  {{/if}}
     requestHttpOptions?: HttpOptions
   ): Observable<{{&responseTypeSchema.type}}> {
     const path = `{{&path}}`;
@@ -93,7 +93,7 @@ export class {{&serviceName}} implements {{&interfaceName}} {
     }
       {{/isHeaderParameter}}
     {{/parameters}}
-    {{#formData.length}}
+    {{#if formData.length}}
     const formData = new FormData();
     {{#formData}}
     if (args.{{&camelCaseName}} != undefined) {
@@ -101,8 +101,8 @@ export class {{&serviceName}} implements {{&interfaceName}} {
     }
     {{/formData}}
 
-    {{/formData.length}}
-    return this.sendRequest<{{&responseTypeSchema.type}}>('{{methodType}}', path, options{{#parameters}}{{#isBodyParameter}}, JSON.stringify(args.{{&camelCaseName}}){{/isBodyParameter}}{{/parameters}}{{#formData.length}}, formData{{/formData.length}});
+    {{/if}}
+    return this.sendRequest<{{&responseTypeSchema.type}}>('{{methodType}}', path, options{{#parameters}}{{#isBodyParameter}}, JSON.stringify(args.{{&camelCaseName}}){{/isBodyParameter}}{{/parameters}}{{#if formData.length}}, formData{{/if}});
   }
 
 {{/methods}}
