refactor(generator): api service interface template refactored to handlebars

--- a/templates/ngx-service-interface.handlebars
+++ b/templates/ngx-service-interface.handlebars
@@ -12,13 +12,13 @@ export interface {{&interfaceName}} {
    * {{&.}}
    */
 {{/description}}  {{&methodName}}(
-  {{#parameters.length}}
+  {{#if parameters.length}}
     args: {
-    {{#parameters}}
-      {{&camelCaseName}}{{^isRequired}}?{{/isRequired}}: {{&type}},{{#description}}  //{{^isRequired}} (optional){{/isRequired}} {{&.}}{{/description}}
-    {{/parameters}}
+    {{#each parameters}}
+      {{camelCase name}}{{^isRequired}}?{{/isRequired}}: {{&type}},{{#if description}}  //{{#unless isRequired}} (optional){{/unless}} {{&description}}{{/if}}
+    {{/each}}
     },
-  {{/parameters.length}}
+  {{/if}}
     requestHttpOptions?: HttpOptions
   ): Observable<{{&responseTypeSchema.type}}>;
 
