--- a/templates/ngx-module-export.handlebars
+++ b/templates/ngx-module-export.handlebars
@@ -3,6 +3,7 @@
 import { NgModule, ModuleWithProviders } from '@angular/core';
 import { {{&serviceName}}, USE_DOMAIN, USE_HTTP_OPTIONS } from './{{&serviceFileName}}';
 import { Guarded{{&serviceName}} } from './guarded-{{&serviceFileName}}';
+import { APIClientModuleConfig } from '{{#if serviceTag}}../.{{/if}}./types';
 
 export { {{&serviceName}} } from './{{&serviceFileName}}';
 export { {{&interfaceName}} } from './{{&interfaceFileName}}';
