--- a/templates/ngx-service-interface.handlebars
+++ b/templates/ngx-service-interface.handlebars
@@ -1,7 +1,7 @@
 /* tslint:disable */
 
 import { Observable } from 'rxjs';
-import { HttpOptions } from './';
+import { HttpOptions } from '{{#if serviceTag}}../.{{/if}}./types';
 import * as models from '.{{#swaggerTag}}./..{{/swaggerTag}}/models';
 
 export interface {{&interfaceName}} {
