--- a/templates/ngx-service.handlebars
+++ b/templates/ngx-service.handlebars
@@ -31,9 +31,11 @@ export class {{&serviceName}} implements {{&interfaceName}}{{/if}}{{#if (templat
 
   readonly domain: string = `{{&domain}}`;
 
-  constructor(private readonly http: HttpClient,
-              @Optional() @Inject(USE_DOMAIN) domain?: string,
-              @Optional() @Inject(USE_HTTP_OPTIONS) options?: DefaultHttpOptions) {
+  constructor(
+    private readonly http: HttpClient,
+    @Optional() @Inject(USE_DOMAIN) domain?: string,
+    @Optional() @Inject(USE_HTTP_OPTIONS) options?: DefaultHttpOptions,
+  ) {
 
     if (domain != null) {
       this.domain = domain;
