feat(api-client): body request based on the request type and the parameter
BREAKING CHANGE: generator now ignores bodies for requests that should not send any body, only PUT, PATCH and POST should contain body and it is handled as optional

--- a/templates/ngx-service.handlebars
+++ b/templates/ngx-service.handlebars
@@ -136,7 +136,7 @@ export class {{#if (templateType 'guardedService')}}Guarded{{&serviceName}} exte
     {{/formData}}
 
     {{/if}}
-    return this.http.{{methodType}}<{{&responseTypeSchema.type}}>(`${this.domain}${path}`{{#parameters}}{{#isBodyParameter}}, JSON.stringify(args.{{&camelCaseName}}){{/isBodyParameter}}{{/parameters}}{{#if formData.length}}, formData{{/if}}, options);{{else}}
+    return this.http.{{methodType}}<{{&responseTypeSchema.type}}>(`${this.domain}${path}`{{#if body}}, {{body}}{{/if}}, options);{{else}}
     return super.{{&methodName}}({{#if parameters.length}}args, {{/if}}requestHttpOptions, observe){{#responseGuard}}
       .pipe(tap((res: any) => {{&../responseGuard}} || console.error(`TypeGuard for response '{{&../responseTypeSchema.type}}' caught inconsistency.`, res))){{/responseGuard}};{{/if}}
   }{{else}};{{/if}}
