refactor(models): property name camelCase conversion fixed

--- a/templates/ngx-model.handlebars
+++ b/templates/ngx-model.handlebars
@@ -16,7 +16,7 @@ import {
 {{/if}}export interface {{&definitionName}} {{#extend}}extends {{.}} {{/extend}}{
 {{#properties}}
   {{#if description}}/** {{&description}} */
-  {{/if}}{{camelCase name}}{{^isRequired}}?{{/isRequired}}: {{&type}};
+  {{/if}}{{&name}}{{^isRequired}}?{{/isRequired}}: {{&type}};
 {{/properties}}
 }
 {{/isEnum}}
