feat(generator): descriptions generated as single/multi line docs comments
support for deprecated methods added
closes #88

--- a/templates/ngx-service.handlebars
+++ b/templates/ngx-service.handlebars
@@ -61,10 +61,8 @@ export class {{#if (templateType 'guardedService')}}Guarded{{&serviceName}} exte
     {{/each}}
   };
 
-{{/if}}{{/if}}{{#description}}  /**
-   * {{&.}}
-   */
-{{/description}}  {{&methodName}}(
+{{/if}}{{/if}}{{#if description}}  {{&description}}
+{{/if}}  {{&methodName}}(
   {{#if parameters.length}}
     args: Exclude<{{&../interfaceName}}['{{&methodName}}Params'], undefined>,
   {{/if}}
