--- a/templates/ngx-model.handlebars
+++ b/templates/ngx-model.handlebars
@@ -15,7 +15,7 @@ import {
  */
 {{/if}}export interface {{&definitionName}} {{#extend}}extends {{.}} {{/extend}}{
 {{#properties}}
-  {{#if description}}/** {{&description}} */
+  {{#if description}}{{&description}}
   {{/if}}{{&name}}{{^isRequired}}?{{/isRequired}}: {{&type}};
 {{/properties}}
 }
