--- a/templates/ngx-service.handlebars
+++ b/templates/ngx-service.handlebars
@@ -64,32 +64,32 @@ export class {{#if (templateType 'guardedService')}}Guarded{{&serviceName}} exte
 {{/if}}{{/if}}{{#if description}}  {{&description}}
 {{/if}}  {{&methodName}}(
   {{#if parameters.length}}
-    args: Exclude<{{&../interfaceName}}['{{&methodName}}Params'], undefined>,
+    args{{#if paramsOptional}}?: {{else}}: Exclude<{{/if}}{{&../interfaceName}}['{{&methodName}}Params']{{#if paramsOptional}}{{else}}, undefined>{{/if}},
   {{/if}}
     requestHttpOptions?: HttpOptions,
     observe?: 'body',
   ): Observable<{{&responseTypeSchema.type}}>;
   {{&methodName}}(
   {{#if parameters.length}}
-    args: Exclude<{{&../interfaceName}}['{{&methodName}}Params'], undefined>,
+    args{{#if paramsOptional}}?: {{else}}: Exclude<{{/if}}{{&../interfaceName}}['{{&methodName}}Params']{{#if paramsOptional}}{{else}}, undefined>{{/if}},
   {{/if}}
     requestHttpOptions?: HttpOptions,
     observe?: 'response',
   ): Observable<HttpResponse<{{&responseTypeSchema.type}}>>;
   {{&methodName}}(
   {{#if parameters.length}}
-    args: Exclude<{{&../interfaceName}}['{{&methodName}}Params'], undefined>,
+    args{{#if paramsOptional}}?: {{else}}: Exclude<{{/if}}{{&../interfaceName}}['{{&methodName}}Params']{{#if paramsOptional}}{{else}}, undefined>{{/if}},
   {{/if}}
     requestHttpOptions?: HttpOptions,
     observe?: 'events',
-  ): Observable<HttpEvent<{{&responseTypeSchema.type}}>>;
+  ): Observable<HttpEvent<{{&responseTypeSchema.type}}>>;{{#if (templateType 'service' 'guardedService')}}
   {{&methodName}}(
   {{#if parameters.length}}
-    args: Exclude<{{&../interfaceName}}['{{&methodName}}Params'], undefined>,
+    args: {{#if paramsOptional}}{{&../interfaceName}}['{{&methodName}}Params'] = {}{{else}}Exclude<{{&../interfaceName}}['{{&methodName}}Params'], undefined>{{/if}},
   {{/if}}
     requestHttpOptions?: HttpOptions,
     observe{{#if (templateType 'service' 'guardedService')}}: any = 'body'{{else}}?: any{{/if}},
-  ): Observable<{{&responseTypeSchema.type}} | HttpResponse<{{&responseTypeSchema.type}}> | HttpEvent<{{&responseTypeSchema.type}}>>{{#if (templateType 'service' 'guardedService')}} {
+  ): Observable<{{&responseTypeSchema.type}} | HttpResponse<{{&responseTypeSchema.type}}> | HttpEvent<{{&responseTypeSchema.type}}>> {
 {{#if (templateType 'service')}}
     const path = `{{&path}}`;
     const options = {
@@ -137,7 +137,7 @@ export class {{#if (templateType 'guardedService')}}Guarded{{&serviceName}} exte
     return this.http.{{methodType}}<{{&responseTypeSchema.type}}>(`${this.domain}${path}`{{#if body}}, {{body}}{{/if}}, options);{{else}}
     return super.{{&methodName}}({{#if parameters.length}}args, {{/if}}requestHttpOptions, observe){{#responseGuard}}
       .pipe(tap((res: any) => {{&../responseGuard}} || console.error(`TypeGuard for response '{{&../responseTypeSchema.type}}' caught inconsistency.`, res))){{/responseGuard}};{{/if}}
-  }{{else}};{{/if}}
+  }{{/if}}
 
 {{/methods}}
 }
