feat(api-client): method params property docs comments
- support for deprecated annotation
- support for default value

--- a/templates/ngx-service.handlebars
+++ b/templates/ngx-service.handlebars
@@ -56,7 +56,7 @@ export class {{#if (templateType 'guardedService')}}Guarded{{&serviceName}} exte
    */
   {{&methodName}}Params?: {
     {{#each parameters}}
-    {{#if description}}/** {{#unless isRequired}} (optional){{/unless}} {{&description}} */
+    {{#if description}}{{&description}}
     {{/if}}{{camelCase name}}{{^isRequired}}?{{/isRequired}}: {{&type}},
     {{/each}}
   };
