--- a/templates/ngx-module-export.handlebars
+++ b/templates/ngx-module-export.handlebars
@@ -1,13 +1,12 @@
 {{> header}}
 
 import { NgModule, ModuleWithProviders } from '@angular/core';
-import { {{&serviceName}}, USE_DOMAIN, USE_HTTP_OPTIONS } from './{{&serviceFileName}}';
-import { Guarded{{&serviceName}} } from './guarded-{{&serviceFileName}}';
+import { {{#unless options.skipGuards}}{{&serviceName}}, {{/unless}}USE_DOMAIN, USE_HTTP_OPTIONS } from './{{&serviceFileName}}';{{#unless options.skipGuards}}
+import { Guarded{{&serviceName}} } from './guarded-{{&serviceFileName}}';{{/unless}}
 import { APIClientModuleConfig } from '{{#if serviceTag}}../.{{/if}}./types';
 
-export { {{&serviceName}} } from './{{&serviceFileName}}';
-export { {{&interfaceName}} } from './{{&interfaceFileName}}';
-export { Guarded{{&serviceName}} } from './guarded-{{&serviceFileName}}';
+export { {{&interfaceName}} } from './{{&interfaceFileName}}';{{#unless options.skipGuards}}
+export { Guarded{{&serviceName}} } from './guarded-{{&serviceFileName}}';{{/unless}}
 
 @NgModule({})
 export class {{&serviceName}}Module {
@@ -23,8 +22,8 @@ export class {{&serviceName}}Module {
       ngModule: {{&serviceName}}Module,
       providers: [
         ...(config.domain != null ? [{provide: USE_DOMAIN, useValue: config.domain}] : []),
-        ...(config.httpOptions ? [{provide: USE_HTTP_OPTIONS, useValue: config.httpOptions}] : []),
-        ...(config.guardResponses ? [{provide: {{&serviceName}}, useClass: Guarded{{&serviceName}} }] : [{{&serviceName}}]),
+        ...(config.httpOptions ? [{provide: USE_HTTP_OPTIONS, useValue: config.httpOptions}] : []),{{#unless options.skipGuards}}
+        ...(config.guardResponses ? [{provide: {{&serviceName}}, useClass: Guarded{{&serviceName}} }] : [{{&serviceName}}]),{{/unless}}
       ]
     };
   }
